# Hivo

./: .gitignore  CLAUDE.md  DEPLOY.md  LICENSE  README.md  README.zh.md
.github/workflows/: release.yml
cli/: go.mod  go.sum  main.go
cli/cmd/: root.go
cli/cmd/club/: club.go  (+18 more)
docs/: .gitignore  chat.md  progress.md  spec.md
docs/guides/: CHECKLIST.md  GUIDE.md
docs/human/: for-human.en.md  for-human.zh.md
docs/specs/: hivo-acl.md  hivo-club.md  hivo-drop.md  hivo-identity.md  hivo-salon.md  hivo-web.md
npm/: README.md  install.js  package.json
servers/hivo-acl/: .env.example  .gitignore  pyproject.toml
servers/hivo-club/: .env.example  pyproject.toml
servers/hivo-drop/: .env.example  LICENSE  README.md  README.zh.md  pyproject.toml
servers/hivo-drop/app/: acl.py  auth.py  config.py  db.py  identity.py  main.py  models.py  routes.py  storage.py
servers/hivo-drop/tests/: conftest.py  test_drop.py
servers/hivo-identity/: .env.example  .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml  requirements-dev.txt  requirements.txt
servers/hivo-identity/app/: config.py  db.py  keys.py  main.py  models.py  routes.py  tokens.py
servers/hivo-identity/tests/: conftest.py  test_me_and_public.py  test_register.py  test_token.py
servers/hivo-salon/: .env.example  pyproject.toml
servers/hivo-salon/app/: acl.py  auth.py  club.py  config.py  db.py  identity.py  main.py  models.py  routes.py
servers/hivo-salon/tests/: conftest.py  test_salon.py
servers/hivo-web/: .env.example  .gitignore  pyproject.toml
skills/: .gitignore
skills/hivo-club/: SKILL.md
skills/hivo-drop/: SKILL.md
skills/hivo-identity/: SKILL.md
skills/hivo-salon/: SKILL.md
(+90 files in other folders)
