[project]
name = "agent-drop"
version = "0.1.0"
description = "Agent file storage and sharing service"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.0",
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.42.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "moto[s3]>=5.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
