[project]
name = "hivo-salon"
version = "0.1.0"
description = "Hivo Salon: real-time communication spaces within clubs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn[standard]>=0.42.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "cryptography>=46.0.6",
    "httpx>=0.28.1",
    "gunicorn>=25.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
